# git-branchless

./: .editorconfig  .gitattributes  .gitignore  .gitpod.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GPG-SIGNING-GUIDE.md  LICENSE  README.md  branchless.py  build.rs  failing  flake.nix  install.sh  passing  requirements-dev.txt  requirements.txt  rust-toolchain.toml  setup.cfg  setup.py  test-advanced-gpg-subtrees.sh  test-gpg-signing.sh  test_branchless.py
.github/: FUNDING.yml  (+1 more)
git-branchless/: Cargo.toml
git-branchless-hook/: Cargo.toml
git-branchless-hook/src/: lib.rs  main.rs
git-branchless-hook/tests/: test_hook.rs
git-branchless-init/: Cargo.toml
git-branchless-init/src/: lib.rs  main.rs
git-branchless-invoke/: Cargo.toml
git-branchless-invoke/src/: lib.rs
git-branchless-lib/: .Cargo.toml.swp  Cargo.toml  README.md
git-branchless-lib/benches/: benches.rs
git-branchless-lib/src/: lib.rs  testing.rs  util.rs
git-branchless-lib/src/core/: check_out.rs  config.rs  dag.rs  effects.rs  eventlog.rs  formatting.rs  gc.rs  mod.rs  node_descriptors.rs  repo_ext.rs  task.rs  untracked_file_cache.rs  worktree.rs
git-branchless-lib/src/core/rewrite/: evolve.rs  execute.rs  mod.rs  plan.rs  rewrite_hooks.rs
git-branchless-lib/src/git/: config.rs  diff.rs  index.rs  mod.rs  object.rs  oid.rs  reference.rs  repo.rs  run.rs  sign.rs  snapshot.rs  status.rs  test.rs  tree.rs
git-branchless-lib/tests/: test_eventlog.rs  test_git_run.rs  test_git_tree.rs  test_repo.rs  test_rewrite_evolve.rs  test_rewrite_plan.rs  test_sign.rs  test_snapshot.rs  test_status.rs
git-branchless-lib/tests/test_data/gpg/: pubring.kbx  pubring.kbx~  trustdb.gpg
git-branchless-lib/tests/test_data/gpg/openpgp-revocs.d/: F0BD7243618F2F5FB77B071DB3B9DB339CA11313.rev
git-branchless-lib/tests/test_data/gpg/private-keys-v1.d/: 06FB31B395BD400708E4F73B5A0DB2B9B5C97CA5.key  (+1 more)
git-branchless-lib/tests/test_data/ssh/: id_ed25519  id_ed25519.pub  ssh-allowed-signers
git-branchless-lib/tests/test_data/x509/: ca.crt  ca.key  ca.p12  generate.sh  git.crt  git.csr  git.key  git.p12  gpgsm.conf  pubring.kbx  pubring.kbx~  trustlist.txt
git-branchless-move/: Cargo.toml
git-branchless-move/src/: lib.rs
git-branchless-navigation/: Cargo.toml
git-branchless-navigation/src/: lib.rs  prompt.rs
git-branchless-opts/: Cargo.toml
git-branchless-opts/src/: lib.rs
git-branchless-query/: Cargo.toml
git-branchless-query/src/: lib.rs  main.rs
git-branchless-query/tests/: test_query.rs
git-branchless-record/: Cargo.toml
git-branchless-record/src/: lib.rs  main.rs
git-branchless-record/tests/: test_record.rs
git-branchless-revset/: Cargo.toml
git-branchless-revset/src/: ast.rs  builtins.rs  eval.rs  grammar.lalrpop  lib.rs  parser.rs  pattern.rs  resolve.rs
git-branchless-reword/: Cargo.toml
git-branchless-reword/src/: dialoguer_edit.rs  lib.rs
git-branchless-smartlog/: Cargo.toml
git-branchless-smartlog/src/: lib.rs  main.rs
git-branchless-smartlog/tests/: test_smartlog.rs
git-branchless-submit/: Cargo.toml
git-branchless-submit/examples/: dump_phabricator_dependencies.rs
git-branchless-submit/src/: .github.rs.swp  branch_forge.rs  branch_push_forge.rs  github.rs  lib.rs  lib.rs.jjconflict  main.rs  phabricator.rs  phabricator.rs.jjconflict
git-branchless-submit/tests/: test_github_forge.rs  test_phabricator_forge.rs  test_submit.rs
git-branchless-test/: Cargo.toml
git-branchless-test/src/: lib.rs  main.rs  worker.rs
git-branchless-test/tests/: test_test.rs
git-branchless-testing/: Cargo.toml
git-branchless-testing/src/: lib.rs
git-branchless-undo/: Cargo.toml  LICENSE-MIT
git-branchless-undo/src/: lib.rs
git-branchless-undo/src/tui/: cursive.rs  mod.rs  testing.rs
git-branchless-undo/tests/: test_undo.rs
git-branchless/src/: lib.rs  main.rs  opts.rs
git-branchless/src/commands/: amend.rs  bug_report.rs  gc.rs  hide.rs  hooks.rs  init.rs  mod.rs  move.rs  navigation.rs  query.rs  record.rs  repair.rs  restack.rs  reword.rs  smartlog.rs  snapshot.rs  split.rs  submit.rs  sync.rs  test.rs  undo.rs  wrap.rs
git-branchless/src/core/: eventlog.rs  task.rs
git-branchless/src/git/: mod.rs  run.rs
git-branchless/src/revset/: ast.rs  builtins.rs  eval.rs  grammar.lalrpop  grammar.rs  mod.rs  parser.rs  pattern.rs  resolve.rs
git-branchless/src/tui/: cursive.rs  mod.rs  prompt.rs
git-branchless/tests/: mod.rs  test_amend.rs  test_branchless.rs  test_bug_report.rs  test_eventlog.rs  test_gc.rs  test_git.rs  test_hide.rs  test_hooks.rs  test_init.rs  test_move.rs  test_navigation.rs  test_query.rs  test_record.rs  test_repair.rs  test_restack.rs  test_reword.rs  test_smartlog.rs  test_smartlog_worktree.rs  test_snapshot.rs  test_split.rs  test_submit.rs  test_sync.rs  test_test.rs  test_undo.rs  test_wrap.rs  util.rs
git-branchless/tests/command/: test_amend.rs  test_bug_report.rs  test_hide.rs  test_init.rs  test_move.rs  test_navigation.rs  test_query.rs  test_record.rs  test_repair.rs  test_restack.rs  test_reword.rs  test_smartlog.rs  test_snapshot.rs  test_submit.rs  test_sync.rs  test_test.rs  test_undo.rs  test_wrap.rs
git-branchless/tests/core/: test_eventlog.rs  test_gc.rs  test_hooks.rs
git-record/: Cargo.toml  README.md
git-record/benches/: benches.rs
git-record/examples/: static_contents.rs
git-record/src/: cursive_utils.rs  lib.rs  main.rs  tristate.rs  types.rs  ui.rs  views.rs
scm-bisect/: Cargo.toml  README.md
scm-bisect/benches/: bench_minimize.rs
scm-bisect/examples/: guessing_game.proptest-regressions  guessing_game.rs
scm-bisect/proptest-regressions/: basic_search.txt  lib.txt  minimize.txt
scm-bisect/src/: basic.rs  basic_search.rs  lib.rs  minimize.rs  search.rs  testing.rs
scm-record/: Cargo.toml  README.md
scm-record/benches/: benches.rs
scm-record/examples/: load_json.rs  static_contents.rs
scm-record/src/: consts.rs  helpers.rs  lib.rs  render.rs  scm_diff_editor.rs  types.rs  ui.rs  util.rs
scm-record/tests/: example_contents.json  test_scm_record.rs  ui_state.1.json
(+174 files in other folders)
