[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[workspace]
default-members = ["git-branchless"]
members = [
    "git-branchless-hook",
    "git-branchless-init",
    "git-branchless-invoke",
    "git-branchless-lib",
    "git-branchless-move",
    "git-branchless-navigation",
    "git-branchless-opts",
    "git-branchless-query",
    "git-branchless-record",
    "git-branchless-revset",
    "git-branchless-reword",
    "git-branchless-smartlog",
    "git-branchless-submit",
    "git-branchless-test",
    "git-branchless-undo",
    "git-branchless",
    "scm-bisect",
]
resolver = "2"

[workspace.metadata.release]
consolidate-commits = true
push = false
tag = false

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.88"
bstr = "1.11.3"
bugreport = "0.5.1"
chashmap = "2.2.2"
chrono = "0.4.40"
chrono-english = "0.1.7"
chronoutil = "0.2.7"
clap = "4.5.32"
clap_mangen = "0.2.26"
color-eyre = "0.6.3"
concolor = { version = "0.1.1", features = ["auto"] }
console = "0.15.10"
crossbeam = "0.8.4"
cursive = { version = "0.20.0", default-features = false, features = [
    "crossterm-backend",
] }
cursive_buffered_backend = "0.6.2"
cursive_core = "0.3.7"
eden_dag = { package = "esl01-dag", version = "0.3.0" }
eyre = "0.6.12"
fslock = "0.2.1"
futures = "0.3.30"
git-branchless-hook = { version = "0.10.0", path = "git-branchless-hook" }
git-branchless-init = { version = "0.10.0", path = "git-branchless-init" }
git-branchless-invoke = { version = "0.10.0", path = "git-branchless-invoke" }
git-branchless-move = { version = "0.10.0", path = "git-branchless-move" }
git-branchless-navigation = { version = "0.10.0", path = "git-branchless-navigation" }
git-branchless-opts = { version = "0.10.0", path = "git-branchless-opts" }
git-branchless-query = { version = "0.10.0", path = "git-branchless-query" }
git-branchless-record = { version = "0.10.0", path = "git-branchless-record" }
git-branchless-revset = { version = "0.10.0", path = "git-branchless-revset" }
git-branchless-reword = { version = "0.10.0", path = "git-branchless-reword" }
git-branchless-smartlog = { version = "0.10.0", path = "git-branchless-smartlog" }
git-branchless-submit = { version = "0.10.0", path = "git-branchless-submit" }
git-branchless-test = { version = "0.10.0", path = "git-branchless-test" }
git-branchless-undo = { version = "0.10.0", path = "git-branchless-undo" }
git2 = { version = "0.20.0", default-features = false }
git2-ext = "0.6.3"
glob = "0.3.2"
indexmap = "2.7.1"
indicatif = { version = "0.17.11", features = ["improved_unicode"] }
itertools = "0.14.0"
lalrpop = "0.19.12"
lalrpop-util = "0.19.12"
lazy_static = "1.5.0"
lib = { package = "git-branchless-lib", version = "0.10.0", path = "git-branchless-lib" }
man = "0.3.0"
num_cpus = "1.16.0"
once_cell = "1.20.3"
path-slash = "0.2.1"
portable-pty = "0.8.1"
rayon = "1.10.0"
regex = "1.11.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
scm-bisect = { version = "0.3.0", path = "scm-bisect" }
scm-diff-editor = "0.4.0"
scm-record = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
shell-words = "1.1.0"
skim = "0.10.4"
tempfile = "3.16.0"
textwrap = "0.16.1"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-chrome = "0.6.0"
tracing-error = "0.2.1"
tracing-subscriber = { version = "=0.3.11", features = ["env-filter"] }
vt100 = "0.15.2"

# dev-dependencies
assert_cmd = "2.0.16"
cc = "1.2.16"
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = "1.42.1"
maplit = "1.0.2"
