[metadata]
name = branchless
version = 0.1.0
description = Branchless workflow for Git
author = Waleed Khan
author_email = me@waleedkhan.name
license = Apache License, Version 2.0

[options]
zip_safe = True
install_requires =
    colorama>=0.4.4
    pygit2>=1.3.0
    readchar>=2.0.1
    typing-extensions>=3.7.4.3
packages = branchless

[options.entry_points]
console_scripts =
    git-branchless = branchless.__main__:entry_point

[flake8]
ignore = E203, W503
max_line_length = 160

[isort]
profile = black
src_paths = branchless, test

[tool:pytest]
python_paths = .
