[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "GPL-2.0-only"
name = "git-branchless-hook"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
itertools = "0.10.5"
tracing = "0.1.37"
lazy_static = "1.4.0"
console = "0.15.3"
regex = "1.7.0"
git-branchless-invoke = { version = "0.7.0", path = "../git-branchless-invoke" }
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
