[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-hook"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = { workspace = true }
eyre = { workspace = true }
git-branchless-invoke = { workspace = true }
git-branchless-opts = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
lib = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
git-branchless-testing = { workspace = true }
insta = { workspace = true }
