[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "GPL-2.0-only"
name = "git-branchless-init"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.3"
eyre = "0.6.8"
git-branchless-invoke = { version = "0.7.0", path = "../git-branchless-invoke" }
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
itertools = "0.10.5"
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
path-slash = "0.2.1"
tracing = "0.1.37"

[dev-dependencies]
assert_cmd = "2.0.7"
