[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-invoke"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
cursive_core = "0.3.6"
eyre = "0.6.8"
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
git2 = { version = "0.16.1", default-features = false }
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
tracing = "0.1.37"
tracing-chrome = "0.6.0"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
