[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-invoke"
repository = "https://github.com/arxanas/git-branchless"
version = "0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
cursive_core = { workspace = true }
eyre = { workspace = true }
git-branchless-opts = { workspace = true }
git2 = { version = "0.18.0", default-features = false }
lib = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
