[package]
description = "Supporting library for git-branchless"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "git-branchless-invoke"
repository = "https://github.com/arxanas/git-branchless"
version = "0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
cursive_core = { workspace = true }
eyre = { workspace = true }
git-branchless-opts = { workspace = true }
git2 = { workspace = true }
lib = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
