[package]
authors = ["Waleed Khan <me@waleedkhan.name>"]
description = "Support library for git-branchless."
edition = "2021"
keywords = ["git"]
license = "MIT OR Apache-2.0"
name = "git-branchless-lib"
repository = "https://github.com/arxanas/git-branchless"
rust-version = "1.64.0"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "branchless"

[features]
default = []
integration-test-bin = []

[[bench]]
harness = false
name = "benches"

## Testing binaries ##
[[bin]]
name = "git-branchless-regression-test-cherry-pick"
path = "bin/testing/regression_test_cherry_pick.rs"
required-features = ["integration-test-bin"]
test = true

[[bin]]
name = "git-branchless-regression-test-record"
path = "bin/testing/regression_test_record.rs"
required-features = ["integration-test-bin"]
test = true

[[bin]]
name = "git-branchless-profile-changed-paths"
path = "bin/testing/profile_changed_paths.rs"
required-features = ["integration-test-bin"]
test = true

[dependencies]
anyhow = "1.0.72"
assert_cmd = "2.0.7"
async-trait = "0.1.72"
bstr = "1.6.0"
chashmap = "2.2.2"
chrono = "0.4.26"
color-eyre = "0.6.2"
concolor = { version = "0.1.1", features = ["auto"] }
console = "0.15.7"
cursive = { version = "0.20.0", default-features = false }
eden_dag = { package = "esl01-dag", version = "0.3.0" }
eyre = "0.6.8"
futures = "0.3.28"
git-record = { version = "0.3", path = "../git-record" }
git2 = { version = "0.17.2", default-features = false }
indicatif = { version = "0.17.5", features = ["improved_unicode"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
rayon = "1.7.0"
regex = "1.9.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
scm-record = { version = "0.1.0", path = "../scm-record" }
serde = { version = "1.0.168", features = ["derive"] }
shell-words = "1.1.0"
tempfile = "3.6.0"
textwrap = "0.16.0"
thiserror = "1.0.43"
tracing = "0.1.37"
tracing-chrome = "0.6.0"
tracing-error = "0.2.0"
tracing-subscriber = { version = "=0.3.11", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
git-branchless-testing = { version = "0.7.0", path = "../git-branchless-testing" }
insta = "1.31.0"

# FIXME: when updated to `1.0.74`, the `cc` package causes Nix build failures.
# See https://github.com/arxanas/git-branchless/pull/618.
cc = "=1.0.73"
