[package]
authors = ["Waleed Khan <me@waleedkhan.name>"]
description = "Support library for git-branchless."
edition = "2021"
keywords = ["git"]
license = "MIT OR Apache-2.0"
name = "git-branchless-lib"
repository = "https://github.com/arxanas/git-branchless"
rust-version = "1.82"
version = "0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "branchless"

[features]
default = []
integration-test-bin = []

[[bench]]
harness = false
name = "benches"

## Testing binaries ##
[[bin]]
name = "git-branchless-regression-test-cherry-pick"
path = "bin/testing/regression_test_cherry_pick.rs"
required-features = ["integration-test-bin"]
test = true

[[bin]]
name = "git-branchless-regression-test-record"
path = "bin/testing/regression_test_record.rs"
required-features = ["integration-test-bin"]
test = true

[[bin]]
name = "git-branchless-profile-changed-paths"
path = "bin/testing/profile_changed_paths.rs"
required-features = ["integration-test-bin"]
test = true

[dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
async-trait = { workspace = true }
bstr = { workspace = true }
chashmap = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
concolor = { workspace = true }
console = { workspace = true }
cursive = { workspace = true }
eden_dag = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
portable-pty = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
scm-record = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shell-words = { workspace = true }
tempfile = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
vt100 = { workspace = true }

[dev-dependencies]
cc = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }
