[package]
edition = "2021"
name = "git-branchless-move"
version = "0.7.0-pre.1"

[dependencies]
eden_dag = { package = "esl01-dag", version = "0.2.1" }
eyre = "0.6.8"
git-branchless-revset = { version = "0.7.0-pre.1", path = "../git-branchless-revset" }
git-branchless-opts = { version = "0.7.0-pre.1", path = "../git-branchless-opts" }
lib = { package = "git-branchless-lib", version = "0.7.0-pre.1", path = "../git-branchless-lib" }
rayon = "1.6.1"
tracing = "0.1.37"

[dev-dependencies]
insta = "1.24.1"
