[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-move"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

[dependencies]
eden_dag = { package = "esl01-dag", version = "0.3.0" }
eyre = "0.6.8"
git-branchless-revset = { version = "0.7.0", path = "../git-branchless-revset" }
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
rayon = "1.7.0"
tracing = "0.1.37"

[dev-dependencies]
insta = "1.29.0"
