[package]
description = "Supporting library for git-branchless"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "git-branchless-move"
repository = "https://github.com/arxanas/git-branchless"
version = "0.10.0"

[dependencies]
eden_dag = { workspace = true }
eyre = { workspace = true }
git-branchless-revset = { workspace = true }
git-branchless-opts = { workspace = true }
lib = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
