[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-navigation"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

[dependencies]
cursive = { version = "0.20.0", default-features = false, features = [
  "crossterm-backend",
] }
eden_dag = { package = "esl01-dag", version = "0.3.0" }
eyre = "0.6.8"
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
git-branchless-revset = { version = "0.7.0", path = "../git-branchless-revset" }
git-branchless-smartlog = { version = "0.7.0", path = "../git-branchless-smartlog" }
itertools = "0.11.0"
lib = { version = "0.7.0", path = "../git-branchless-lib", package = "git-branchless-lib" }
tracing = "0.1.37"

[target.'cfg(unix)'.dependencies]
skim = "0.10.4"
