[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-navigation"
repository = "https://github.com/arxanas/git-branchless"
version = "0.9.0"

[dependencies]
eden_dag = { workspace = true }
eyre = { workspace = true }
git-branchless-opts = { workspace = true }
git-branchless-revset = { workspace = true }
git-branchless-smartlog = { workspace = true }
itertools = { workspace = true }
lib = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
skim = { workspace = true }
