[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-opts"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
clap_mangen = "0.2.12"
itertools = "0.11.0"
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
scm-record = { version = "0.1.0", path = "../scm-record", features = ["scm-diff-editor"] }
