[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-opts"
repository = "https://github.com/arxanas/git-branchless"
version = "0.9.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_mangen = { workspace = true }
itertools = { workspace = true }
lib = { workspace = true }
scm-record = { workspace = true, features = ["scm-diff-editor"] }
