[package]
name = "git-branchless-query"
version = "0.7.0-pre.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eden_dag = { package = "esl01-dag", version = "0.2.1" }
eyre = "0.6.8"
git-branchless-invoke = { version = "0.7.0-pre.1", path = "../git-branchless-invoke" }
git-branchless-opts = { version = "0.7.0-pre.1", path = "../git-branchless-opts" }
git-branchless-revset = { version = "0.7.0-pre.1", path = "../git-branchless-revset" }
itertools = "0.10.5"
lib = { package = "git-branchless-lib", version = "0.7.0-pre.1", path = "../git-branchless-lib" }
tracing = "0.1.37"

[dev-dependencies]
insta = "1.26.0"
