[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-query"
repository = "https://github.com/arxanas/git-branchless"
version = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eden_dag = { workspace = true }
eyre = { workspace = true }
git-branchless-invoke = { workspace = true }
git-branchless-opts = { workspace = true }
git-branchless-revset = { workspace = true }
itertools = { workspace = true }
lib = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
