[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-record"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

[dependencies]
cursive = { version = "0.20.0", default-features = false, features = [
  "crossterm-backend",
] }
cursive_buffered_backend = "0.6.1"
eden_dag = { package = "esl01-dag", version = "0.3.0" }
eyre = "0.6.8"
git-branchless-invoke = { version = "0.7.0", path = "../git-branchless-invoke" }
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
git-record = { version = "0.3.0", path = "../git-record" }
itertools = "0.10.5"
lib = { version = "0.7.0", path = "../git-branchless-lib", package = "git-branchless-lib" }
rayon = "1.6.1"
tracing = "0.1.37"

[dev-dependencies]
git-branchless-testing = { version = "0.7.0", path = "../git-branchless-testing" }
insta = "1.28.0"
