[package]
description = "Supporting library for git-branchless"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "git-branchless-record"
repository = "https://github.com/arxanas/git-branchless"
version = "0.10.0"

[dependencies]
cursive = { version = "0.21.1", default-features = false, features = [
    "crossterm-backend",
] }
cursive_buffered_backend = { workspace = true }
eden_dag = { workspace = true }
eyre = { workspace = true }
git-branchless-invoke = { workspace = true }
git-branchless-opts = { workspace = true }
git-branchless-reword = { workspace = true }
itertools = { workspace = true }
lib = { workspace = true }
rayon = { workspace = true }
scm-record = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
