[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-revset"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

[dependencies]
bstr = "1.4.0"
chrono = "0.4.24"
chrono-english = "0.1.7"
chronoutil = "0.2.3"
eden_dag = { package = "esl01-dag", version = "0.3.0" }
eyre = "0.6.8"
futures = "0.3.27"
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
glob = "0.3.0"
itertools = "0.10.5"
lalrpop = "0.19.9"
lalrpop-util = "0.19.8"
lazy_static = "1.4.0"
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
rayon = "1.7.0"
regex = "1.7.3"
serde_json = "1.0.95"
thiserror = "1.0.40"
tracing = "0.1.37"

[build-dependencies]
lalrpop = "0.19.9"

[dev-dependencies]
git-branchless-testing = { version = "0.7.0", path = "../git-branchless-testing" }
insta = "1.29.0"
