[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-revset"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

[dependencies]
bstr = "1.6.0"
chrono = "0.4.26"
chrono-english = "0.1.7"
chronoutil = "0.2.5"
eden_dag = { package = "esl01-dag", version = "0.3.0" }
eyre = "0.6.8"
futures = "0.3.28"
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
glob = "0.3.0"
itertools = "0.11.0"
lalrpop = "0.19.12"
lalrpop-util = "0.19.12"
lazy_static = "1.4.0"
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
rayon = "1.7.0"
regex = "1.9.1"
serde_json = "1.0.103"
thiserror = "1.0.44"
tracing = "0.1.37"

[build-dependencies]
lalrpop = "0.19.12"

[dev-dependencies]
git-branchless-testing = { version = "0.7.0", path = "../git-branchless-testing" }
insta = "1.31.0"
