[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-revset"
repository = "https://github.com/arxanas/git-branchless"
version = "0.9.0"

[dependencies]
bstr = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
chronoutil = { workspace = true }
eden_dag = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
git-branchless-opts = { workspace = true }
glob = { workspace = true }
itertools = { workspace = true }
lalrpop = { workspace = true }
lalrpop-util = { workspace = true }
lazy_static = { workspace = true }
lib = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
