[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "GPL-2.0-only"
name = "git-branchless-reword"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0-rc.1"

[dependencies]
bstr = "1.3.0"
chrono = "0.4.22"
eden_dag = { package = "esl01-dag", version = "0.2.1" }
eyre = "0.6.8"
git-branchless-opts = { version = "0.7.0-rc.1", path = "../git-branchless-opts" }
git-branchless-revset = { version = "0.7.0-rc.1", path = "../git-branchless-revset" }
lib = { package = "git-branchless-lib", version = "0.7.0-rc.1", path = "../git-branchless-lib" }
rayon = "1.5.3"
shell-words = "1.1.0"
tempfile = "3.4.0"
tracing = "0.1.37"

[dev-dependencies]
insta = "1.28.0"
