[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-reword"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

[dependencies]
bstr = "1.5.0"
chrono = "0.4.25"
eden_dag = { package = "esl01-dag", version = "0.3.0" }
eyre = "0.6.8"
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
git-branchless-revset = { version = "0.7.0", path = "../git-branchless-revset" }
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
rayon = "1.7.0"
shell-words = "1.1.0"
tempfile = "3.5.0"
tracing = "0.1.37"

[dev-dependencies]
git-branchless-testing = { version = "0.7.0", path = "../git-branchless-testing" }
insta = "1.29.0"
