[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-smartlog"
repository = "https://github.com/arxanas/git-branchless"
version = "0.8.0"

[dependencies]
cursive_core = { workspace = true }
eden_dag = { workspace = true }
eyre = { workspace = true }
git-branchless-invoke = { workspace = true }
git-branchless-opts = { workspace = true }
git-branchless-revset = { workspace = true }
lib = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
git-branchless-testing = { workspace = true }
insta = { workspace = true }
